--- a/Movie_Reccomendation_System_ML_Project.ipynb
+++ b/Movie_Reccomendation_System_ML_Project.ipynb
@@ -28,6 +28,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## **Project - Movie Reccomendation System**"
+      ],
+      "metadata": {
+        "id": "JHdiGfjNo23E"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Introduction\n",
         "Movies hold universal appeal, connecting people of all backgrounds. Despite this unity, our individual movie preferences remain distinct, ranging from specific genres like thrillers, romance, or sci-fi to focusing on favorite actors and directors. While it’s challenging to generalize movies everyone would enjoy, data scientists analyze behavioral patterns to identify groups of similar movie preferences in society. As data scientists, we extract valuable insights from audience behavior and movie attributes to develop the “Movie Recommendation System.”\n",
         "\n",
@@ -58,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "Nlcx_KcZEVVB"
       },
@@ -83,7 +92,7 @@
         "id": "e8kVUaagWuQT",
         "outputId": "59bfd72c-38d0-4088-e299-846382ff90b0"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +113,7 @@
       "metadata": {
         "id": "gkya8k2tFY_K"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +139,7 @@
         "id": "RuP77Ym3GnCn",
         "outputId": "0ff51998-e2cb-4fe1-dea8-48a4f25e1cc9"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -503,7 +512,7 @@
         "id": "4I3tJWZhHcqq",
         "outputId": "ee05c35d-90d7-4f5e-cd02-adfef0ac2b09"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -796,7 +805,7 @@
       "metadata": {
         "id": "D4FkRPGyJVkb"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,7 +821,7 @@
         "id": "AiU1WV9ZJxQG",
         "outputId": "f0056e34-c8da-40e1-bc7f-e290c214e58f"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1025,7 +1034,7 @@
         "id": "QZgxk19-LrMH",
         "outputId": "67be215a-75da-4d1e-805a-969307626916"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1080,7 +1089,7 @@
         "id": "xv_IiwDyLkuC",
         "outputId": "422acfb9-6aec-4cc3-98c6-833f67665d73"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1398,7 +1407,7 @@
         "id": "LdXwgTeQNOYc",
         "outputId": "aeb73b28-f37f-453d-af24-7c7796fd5adf"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1427,7 +1436,7 @@
       "metadata": {
         "id": "_9SKMxmzOJ1S"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1442,7 +1451,7 @@
         "id": "BdBqqux3OfWR",
         "outputId": "91de11b0-ebcf-49b2-c1e0-a017db83eb3d"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1476,7 +1485,7 @@
         "id": "po2bh4wXOhCV",
         "outputId": "54fa671b-45ce-46f0-f33a-597a472739cb"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1498,7 +1507,7 @@
       "metadata": {
         "id": "9mhMdWB6Oqpd"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1515,7 +1524,7 @@
       "metadata": {
         "id": "FltcQ_nxRhG9"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1527,7 +1536,7 @@
       "metadata": {
         "id": "IVzRJGBiT12c"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1543,7 +1552,7 @@
         "id": "d4yzjWCtUD8k",
         "outputId": "d2fe81b4-840c-4296-ec6f-2cc8e8d3cc6b"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1721,7 +1730,7 @@
       "metadata": {
         "id": "hbLxRcTgW4oP"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1737,7 +1746,7 @@
         "id": "HsjyRfD4Xasu",
         "outputId": "17b1a7ab-5230-4815-af34-6ff4b1d8e4a7"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1771,13 +1780,13 @@
       "metadata": {
         "id": "98e_nj5aXnng"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# filter the key word column by applying th econvert function\n",
+        "# filter the key word column by applying the convert function\n",
         "movies['keywords'].apply(convert)"
       ],
       "metadata": {
@@ -1787,7 +1796,7 @@
         "id": "KnJ92dNgX5R9",
         "outputId": "75e02bbb-186c-4aad-b1de-8b0fb4c3dbc9"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1821,7 +1830,7 @@
       "metadata": {
         "id": "xvHeAU6JYN3k"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1839,7 +1848,7 @@
       "metadata": {
         "id": "5cvjTKEBYYVn"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1854,7 +1863,7 @@
         "id": "RxZHrxQqaCd9",
         "outputId": "bf937448-7d7e-4617-e4c0-1d4ea6e25daa"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1888,7 +1897,7 @@
       "metadata": {
         "id": "fHSTQQbDaMUv"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1900,7 +1909,7 @@
       "metadata": {
         "id": "ilr_vyhfcjcA"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1915,7 +1924,7 @@
       "metadata": {
         "id": "5QrUYKyDc4zz"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1931,7 +1940,7 @@
         "id": "3oH2O5xWd11f",
         "outputId": "3a3bc7b9-3350-4abb-b1f6-0adce074437d"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2291,7 +2300,7 @@
       "source": [
         "# concatenate all column to make the  new colum tag\n",
         "movies['tag'] = movies['overview']+movies['genres']+movies['keywords']+movies['cast']+movies['crew']\n",
-        "                          #OR movies = movies[['movie_id', 'title',   'overview','genres', 'keywords','cast','crew']]\n",
+        "#OR -- movies = movies[['movie_id', 'title', 'overview','genres', 'keywords','cast','crew']]\n",
         "movies.head()"
       ],
       "metadata": {
@@ -2302,7 +2311,7 @@
         "id": "FaW0q-LId3uf",
         "outputId": "5c84ef02-da57-4ece-821b-88f01e851d5a"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2676,7 +2685,7 @@
         "id": "IAIts9EbbEPT",
         "outputId": "9ba6e8b0-372d-48e9-d2f8-8ca7eee58c33"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2990,7 +2999,7 @@
         "id": "gmQik3tFce3o",
         "outputId": "040697e5-680d-40b5-aba2-1e75ab2ee939"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3019,7 +3028,7 @@
         "id": "groKwx5JeKcK",
         "outputId": "5871223b-8c9f-49b9-e29f-e17315180145"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3333,7 +3342,7 @@
         "id": "0ZJByRYVefhX",
         "outputId": "07f217de-8606-4adb-c0f0-ba41f74ce5ec"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3362,7 +3371,7 @@
         "id": "PdIn9kbzftpG",
         "outputId": "1c25bd05-4b4e-4aff-f0f2-2a98936232a3"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3682,20 +3691,19 @@
       "metadata": {
         "id": "EOl8af2Kfv7v"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# make a class for porterStemmer\n",
-        "#  this function or class for convert word like loving  = love ,loved = love (ROOT WORD) as common words to more accurate result\n",
+        "#Make a class for porterStemmer\n",
         "ps = PorterStemmer()"
       ],
       "metadata": {
         "id": "thPzsjX-mpQn"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3711,7 +3719,7 @@
       "metadata": {
         "id": "zJNKfsZ2nIcF"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3726,7 +3734,7 @@
         "id": "cqyHyl2nm0BO",
         "outputId": "f69c87d6-9919-418c-96ea-060e71ae8ac6"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3755,7 +3763,7 @@
         "id": "-ltXjZj_qKL7",
         "outputId": "a205c8ee-e3e5-4925-80c4-2d08974865e9"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3775,7 +3783,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1) we have to convert the all tag as vector\n",
+        "We have to convert the all tag as vector\n",
         "\n",
         "why\n",
         "\n",
@@ -3793,26 +3801,25 @@
     {
       "cell_type": "code",
       "source": [
-        "# convert text to vector\n",
-        "# for it we have to  import the ( from sklearn.feature_extraction text  import countvectorizer)"
+        "# converting text to vector"
       ],
       "metadata": {
         "id": "9C2vtHr7j1_6"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "from sklearn.feature_extraction.text import CountVectorizer\n",
-        "# hare we convert the all movie in to the vector\n",
-        "#  and ech movies has 5000 value which is nothing else 5000 coordinate"
+        "# here we convert the all movie in to the vector and\n",
+        "# Each movies has 5000 value which is nothing else 5000 coordinate"
       ],
       "metadata": {
         "id": "A6WkhzAtkV5V"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3824,7 +3831,7 @@
       "metadata": {
         "id": "KSYkIm80lCEK"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3841,7 +3848,7 @@
         "id": "M4wlDmrulDiR",
         "outputId": "1275c337-df17-41fb-ca98-b7fc3d0d2e71"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3875,7 +3882,7 @@
         },
         "outputId": "1629d581-1b89-4d3f-a892-cd196d88d80c"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4892,7 +4899,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#  now we have to calculate the distance between each vector\n",
+        "# now we have to calculate the distance between each vector\n",
         "# we have to calculate the cosine distance\n",
         "# if the distance b/w the two vector is very close than mean angle between the two vector is very low\n",
         "# which mean both movies has more similarities.\n"
@@ -4900,7 +4907,7 @@
       "metadata": {
         "id": "9PThs8BYl-xM"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4912,7 +4919,7 @@
       "metadata": {
         "id": "3YKgPnoKnT03"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4929,7 +4936,7 @@
         "id": "Yf5Dx5XEnq6U",
         "outputId": "e232464b-6e34-4b9e-bcfd-e8b0f5c8524c"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4960,9 +4967,9 @@
       "source": [
         "# get the shape of vectors\n",
         "cosine_similarity(vector).shape\n",
-        "# hare distance is calculated in angular manner\n",
-        "# from each movie to reaming 4805 movie\n",
-        "# so threr are 4806x4806 result"
+        "# here distance is calculated in angular manner\n",
+        "# from each movie to remaining 4805 movie\n",
+        "# so there are 4806x4806 result"
       ],
       "metadata": {
         "colab": {
@@ -4971,7 +4978,7 @@
         "id": "JWTR8Pwfn2ll",
         "outputId": "b8f5edf8-fdc4-4d00-9348-abe5347ad5e0"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4997,7 +5004,7 @@
         "id": "GVwVnTofti8L",
         "outputId": "8e097f93-b460-4451-c2f9-a25c5ad34cac"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5020,14 +5027,14 @@
         "# similarity[0]\n",
         "# enumerate(similarity[0])\n",
         "# list(enumerate(similarity[0]))\n",
-        "# # shorthe movie\n",
+        "# # shorthed movie\n",
         "# sorted(list(enumerate(similarity[0])),reverse = True,key = lambda x:x[1])\n",
         "# # lambda x:x[1]  = Defining to find movies not on index but on the distance between them."
       ],
       "metadata": {
         "id": "zHyeFnTyqrBK"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5045,7 +5052,7 @@
       "metadata": {
         "id": "mCfkeV3PoL_E"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5060,7 +5067,7 @@
         "id": "vjTw4ahEuVNe",
         "outputId": "451e47c6-889d-4663-e88d-41e06aa41372"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5114,7 +5121,7 @@
         "id": "BNd0girbx-uC",
         "outputId": "880b7128-025e-4406-9b16-7bed62bcfb0a"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5141,7 +5148,7 @@
         "id": "LPQrtLngx2hp",
         "outputId": "33ee397d-6544-4c01-9889-16d92d073b40"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
